--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -45,8 +45,12 @@ li { margin: 0.4rem 0; }
 
 *:target { background: yellow; }
 
+.inner {
+  max-width: 90%;
+}
+
 .w {
-  max-width: 840px;
+  max-width: 640px;
   margin: 0 auto;
   padding: 4rem 2rem;
 }
