--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,3 +17,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 </head>
+
+<body>
+   <span class="cursor"></span>
+   <script src="Customcursors.js"></script>
+</body>
