--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,3 +22,4 @@
    <span class="cursor"></span>
    <script src="Customcursors.js"></script>
 </body>
+<script> var cursor = new Cursor("h1","incursor") </script>
