--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -79,7 +79,7 @@ code {
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: pre-wrap;
+  white-space: pre;
   padding: 1rem;
 }
 
