--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -45,10 +45,6 @@ li { margin: 0.4rem 0; }
 
 *:target { background: yellow; }
 
-.inner {
-  max-width: 90%;
-}
-
 .w {
   max-width: 640px;
   margin: 0 auto;
@@ -72,14 +68,14 @@ table, th, td {
 }
 
 code {
-  background-color: #eef;
-   max-width: 1040px;
+  color: white;
+  background: black;
 }
 
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: pre;
+  white-space: pre-wrap;
   padding: 1rem;
 }
 
