--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -68,14 +68,15 @@ table, th, td {
 }
 
 code {
-  color: white;
-  background: black;
+  color: black;
+  background-color: #eef;
 }
 
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
   white-space: pre;
+  wrap: false; 
   padding: 1rem;
 }
 
