--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -75,8 +75,7 @@ code {
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: pre;
-  wrap: false; 
+  white-space: normal;
   padding: 1rem;
 }
 
