--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -76,7 +76,7 @@ code {
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: normal;
+  white-space: nowrap;
   padding: 1rem;
 }
 
