--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -70,13 +70,18 @@ table, th, td {
 code {
   color: black;
   background-color: #eef;
-  white-space: normal;
 }
+
+pre code {
+  white-space: pre;
+}
+
+
 
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: nowrap;
+  white-space: pre;
   padding: 1rem;
 }
 
