--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -70,13 +70,12 @@ table, th, td {
 code {
   color: black;
   background-color: #eef;
+  white-space: nowrap;
 }
 
 pre code {
   white-space: pre;
 }
-
-
 
 div.highlighter-rouge code {
   display: block;
