--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -84,6 +84,13 @@ div.highlighter-rouge code {
   padding: 1rem;
 }
 
+div.highlighter-rouge pre code {
+  display: block;
+  overflow-x: auto;
+  white-space: pre;
+  padding: 1rem;
+}
+
 blockquote {
   font-style: italic;
   border: thin solid black;
