--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -67,18 +67,22 @@ table, th, td {
   padding: 0.4rem;
 }
 
+code {
+  background-color: #eef;
+   max-width: 1040px;
+}
 
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: pre;
+  white-space: pre-wrap;
   padding: 1rem;
 }
 
 div.highlighter-rouge pre code {
   display: block;
   overflow-x: auto;
-  white-space: pre;
+  white-space: pre-wrap;
   padding: 1rem;
 }
 
