--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -78,6 +78,22 @@ pre code {
 }
 
 
+div.highlighter-rouge code {
+  display: block;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  padding: 1rem;
+  float: left;
+}
+
+div.highlighter-rouge pre code {
+  display: block;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  padding: 1rem;
+  float: left;
+}
+
 blockquote {
   font-style: italic;
   border: thin solid black;
