--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -68,29 +68,15 @@ table, th, td {
 }
 
 code {
-  background-color: #eef;
-  font-size: 75%;
+  color: black;
+  background: #dae0de;
 }
-
-pre code {
-  background-color: #eef;
-  font-size: 75%;
-}
-
 
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
   white-space: pre-wrap;
   padding: 1rem;
-}
-
-div.highlighter-rouge pre code {
-  display: block;
-  overflow-x: auto;
-  white-space: pre-wrap;
-  padding: 1rem;
-  float: left;
 }
 
 blockquote {
