--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,6 @@
   {%-feed_meta-%}
   <link rel="stylesheet" href="/assets/css/syntax.css" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
